--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "url": "https://github.com/ndhoule/lame"
   },
   "bugs": "https://github.com/ndhoule/lame/issues",
+  "engines": {
+    "node": ">=0.10.0 < 0.11"
+  },
   "scripts": {
     "test": "make test"
   },
