--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "chai": "^1.9.1",
     "chai-js-factories": "^0.1.3",
     "mocha": "^1.21.4",
-    "mocha-traceur": "git+https://github.com/domenic/mocha-traceur.git#patch-1"
+    "mocha-traceur": "^1.0.0"
   }
 }
