--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "make test"
   },
   "bin": {
-    "lame-repl": "./bin/lame-repl"
+    "lamer": "./bin/lamer"
   },
   "dependencies": {
     "lodash": "^2.4.1",
